# 2026_07_03_kasa_accuracy_report_agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  test.py
agents/: analyst_agent.py  planner_agent.py
analyzers/: analyzer_main.py  forecast_analyzer_main.py  promotions.py  seasonality.py  trend.py
data/: April Snapshot - May Forecasts with Actuals.xlsx  DATAMART_FILLNA_3268_KEYS_ALL_FAMILIES_TILL_DEC_2026_20th_Nov_v1_part_12d.csv  amazon_all.csv
legacy/: constants.py  test.ipynb  test.py
repositories/: datamart_repository.py  forecast_repository.py
services/: summary_services.py
src/kasa_agent/: __init__.py  cli.py  config.py
src/kasa_agent/agents/: analyst_agent.py  planner_agent.py  ppt_agent.py
src/kasa_agent/analyzers/: analyzer_main.py  forecast_analyzer_main.py  promotions.py  seasonality.py  trend.py
src/kasa_agent/repositories/: datamart_repository.py  forecast_repository.py
src/kasa_agent/services/: chart_services.py  summary_services.py
